--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
   "scripts": {
     "amend": "scripts/amend-and-test.sh",
     "deploy": "scripts/deploy.sh",
-    "push": "git push origin --force && git push github --force"
+    "push": "git push -u origin master --force"
   },
   "repository": {
     "type": "git",
-    "url": "usp.wurstsalat.cloud:git/ufi-client.git"
+    "url": "wslt@git.wurstsalat.cloud:UFI/ufi-client.git"
   },
   "author": "Lennart Pelz <mail@mrpelz.de>",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.2",
+    "stylelint": "^13.3.0",
+    "stylelint-config-property-sort-order-smacss": "^6.0.0",
+    "stylelint-config-standard": "^20.0.0",
+    "typescript": "^3.8.3"
+  }
 }
