--- a/package.json
+++ b/package.json
@@ -15,13 +15,9 @@
   "author": "Lennart Pelz <mail@mrpelz.de>",
   "license": "UNLICENSED",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.20.2",
     "stylelint": "^13.3.0",
     "stylelint-config-property-sort-order-smacss": "^6.0.0",
-    "stylelint-config-standard": "^20.0.0",
-    "typescript": "^3.8.3"
+    "stylelint-config-standard": "^20.0.0"
   }
 }
