--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -184,12 +184,7 @@
         "no-loop-func": "error",
         "no-magic-numbers": "off",
         "no-misleading-character-class": "error",
-        "no-mixed-operators": [
-            "error",
-            {
-                "allowSamePrecedence": true
-            }
-        ],
+        "no-mixed-operators": "off",
         "no-mixed-requires": "error",
         "no-multi-assign": "error",
         "no-multi-spaces": "error",
@@ -264,7 +259,7 @@
         ],
         "operator-linebreak": [
             "error",
-            "before"
+            "after"
         ],
         "padded-blocks": "off",
         "padding-line-between-statements": "error",
